PR feedback - reduce api methods
Reduces the amount of API methods and combines functionality.